@@ -1,6 +1,0 @@
-<Configuration>
-  <CodeStyleSettings>
-    <Sharing>EXTERNAL</Sharing>
-    <ExternalPath>..\..\ReSharper.CodingStyle.xml</ExternalPath>
-  </CodeStyleSettings>
-</Configuration>
